okd/gateway/components/wiretap/instance/v0.0.0/service-entry.yaml
apiVersion: networking.istio.io/v1
kind: ServiceEntry
metadata:
  name: loki-external
  namespace: openshift-ingress
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
spec:
  hosts:
    - vlinsert-ingress-logs.openshift-ingress-logs.svc.cluster.local.
  ports:
    - number: 9481
      name: http
      protocol: HTTP
  resolution: DNS
  location: MESH_INTERNAL
